@@ -10,3 +10,5 @@
   
 ##启动方法
 #### Java -jar xxxxxx.jar spring.profiles.actiove=prod
+
+-XX:MetaspaceSize=128m -XX:MaxMetaspaceSize=128m -Xms1024m -Xmx1024m -Xmn256m -Xss256k -XX:SurvivorRatio=8 -XX:+UseConcMarkSweepGC
